--- a/README
+++ b/README
@@ -1,14 +1,12 @@
 Introduction
 ============
 
-This projects implements 2 drivers providing the following features - a High Resolution Timer and a circular
-which can store 4 time-stamps and a variable length string varing from 10 to 80 characters. 
+This projects implements 2 drivers providing the following features - a High Resolution Timer and a circularwhich can store 4 time-stamps and a variable length string varing from 10 to 80 characters. 
 
 Hardware Required 
 =================
 
-The High Resolution Timer uses one of the GP Timers available on TI's DM 3730 Digital Media processor (found on BeagleBoard 
- xM Rev C). The timer provides a resolution of upto 1ns. 
+The High Resolution Timer uses one of the GP Timers available on TI's DM 3730 Digital Media processor (found on BeagleBoard  xM Rev C). The timer provides a resolution of upto 1ns. 
 
 Instructions
 ============
